Slightly enhanced Xml program